[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://map/Tile1.tres" type="TileSet" id=2]
[ext_resource path="res://player/keiki.tscn" type="PackedScene" id=3]
[ext_resource path="res://zone/zone2/stage02.gd" type="Script" id=4]
[ext_resource path="res://map/parallax/city_parallax.tscn" type="PackedScene" id=5]
[ext_resource path="res://map/shaders/fog_shader.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/Haniwa_archer/haniwa_archer.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[node name="stage02" type="Node2D"]
script = ExtResource( 4 )

[node name="city_parallax" parent="." instance=ExtResource( 5 )]

[node name="fog_shader" parent="." instance=ExtResource( 6 )]
visible = true
position = Vector2( 24, -408 )
rotation = 1.5708

[node name="MainMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1900559, 0, 65540, -1900558, 0, 65540, -1900557, 0, 65540, -1900556, 0, 65540, -1900555, 0, 65540, -1900554, 0, 65540, -1900553, 0, 3, -1900552, 0, 131073, -1900551, 0, 131073, -1900550, 0, 131073, -1900549, 0, 131073, -1900548, 0, 131073, -1900547, 0, 131073, -1900546, 0, 131073, -1900545, 0, 131073, -1966080, 0, 131073, -1966079, 0, 131073, -1966078, 0, 131073, -1966077, 0, 131073, -1966076, 0, 131073, -1966075, 0, 131073, -1966074, 0, 131073, -1966073, 0, 131073, -1966072, 0, 131073, -1966071, 0, 131073, -1966070, 0, 131073, -1966069, 0, 131073, -1966068, 0, 131073, -1835023, 0, 65540, -1835022, 0, 65540, -1835021, 0, 65540, -1835020, 0, 65540, -1835019, 0, 65540, -1835018, 0, 65540, -1835017, 0, 65538, -1835016, 0, 196612, -1835015, 0, 196612, -1835014, 0, 196612, -1835013, 0, 196612, -1835012, 0, 196612, -1835011, 0, 196612, -1835010, 0, 196612, -1835009, 0, 196612, -1900544, 2, 131074, -1900538, 2, 131075, -1900537, 0, 65540, -1900536, 0, 65540, -1900535, 0, 65540, -1900534, 0, 65540, -1900533, 0, 65540, -1900532, 0, 65540, -1769487, 0, 65540, -1769486, 0, 65540, -1769485, 0, 65540, -1769484, 0, 65540, -1769483, 0, 65540, -1769482, 0, 65540, -1769481, 0, 65538, -1769480, 0, 196612, -1769479, 0, 196612, -1769478, 0, 196612, -1769477, 0, 196612, -1769476, 0, 196612, -1769475, 0, 196612, -1769474, 0, 196612, -1769473, 1073741826, 196610, -1834999, 2, 131075, -1834998, 0, 65540, -1834997, 0, 65540, -1834996, 0, 65540, -1703951, 0, 65540, -1703950, 0, 65540, -1703949, 0, 65540, -1703948, 0, 65540, -1703947, 0, 65540, -1703946, 0, 65540, -1703945, 0, 65538, -1703944, 0, 196612, -1703943, 0, 196612, -1703942, 0, 196612, -1703941, 0, 196612, -1703940, 1073741826, 196610, -1769466, 0, 0, -1769465, 0, 1, -1769464, 0, 1, -1769463, 0, 1, -1769462, 0, 1, -1769461, 0, 1, -1769460, 0, 1, -1638415, 0, 65540, -1638414, 0, 65540, -1638413, 0, 65540, -1638412, 0, 65540, -1638411, 0, 65540, -1638410, 0, 65540, -1638409, 0, 65538, -1638408, 0, 196612, -1638407, 0, 196612, -1638406, 0, 196612, -1638405, 1073741826, 196610, -1638401, 2, 0, -1703936, 2, 1, -1703935, 2, 1, -1703934, 2, 196610, -1703930, 0, 65536, -1703929, 0, 65540, -1703928, 0, 65540, -1703927, 0, 65540, -1703926, 0, 65540, -1703925, 0, 65540, -1703924, 0, 65540, -1572879, 0, 65540, -1572878, 0, 65540, -1572877, 0, 65540, -1572876, 0, 65540, -1572875, 0, 65540, -1572874, 0, 65540, -1572873, 0, 65538, -1572872, 0, 196612, -1572871, 2, 196611, -1572870, 1073741826, 196610, -1572865, 2, 65536, -1638400, 2, 196612, -1638399, 2, 196612, -1638398, 2, 196612, -1638397, 0, 196608, -1638396, 0, 1, -1638395, 0, 1, -1638394, 0, 65536, -1638393, 0, 65540, -1638392, 0, 65540, -1638391, 0, 65540, -1638390, 0, 65540, -1638389, 0, 65540, -1638388, 0, 65540, -1507343, 0, 65540, -1507342, 0, 65540, -1507341, 0, 65540, -1507340, 0, 65540, -1507339, 0, 65540, -1507338, 0, 65540, -1507337, 0, 65538, -1507336, 2, 196611, -1507335, 1073741826, 196610, -1507329, 2, 131072, -1572864, 2, 196612, -1572863, 2, 196612, -1572862, 0, 196608, -1572861, 0, 131077, -1572860, 0, 65540, -1572859, 0, 65540, -1572858, 0, 65536, -1572857, 0, 65540, -1572856, 0, 65540, -1572855, 0, 65540, -1572854, 0, 65540, -1572853, 0, 65540, -1572852, 0, 65540, -1441807, 0, 65540, -1441806, 0, 65540, -1441805, 0, 65540, -1441804, 0, 65540, -1441803, 0, 65540, -1441802, 0, 65540, -1441801, 0, 65538, -1441800, 1073741826, 196610, -1507328, 2, 196612, -1507327, 0, 196608, -1507326, 0, 131077, -1507325, 0, 65540, -1507324, 0, 65540, -1507323, 0, 65540, -1507322, 0, 65536, -1507321, 0, 65540, -1507320, 0, 65540, -1507319, 0, 65540, -1507318, 0, 65540, -1507317, 0, 65540, -1507316, 0, 65540, -1376271, 0, 65540, -1376270, 0, 65540, -1376269, 0, 65540, -1376268, 0, 65540, -1376267, 0, 65540, -1376266, 0, 65540, -1376265, 0, 65538, -1376264, 0, 1, -1376263, 0, 1, -1376262, 0, 1, -1376261, 0, 196610, -1376260, 2, 196612, -1376259, 2, 131077, -1441792, 0, 196608, -1441791, 0, 131077, -1441790, 0, 65540, -1441789, 0, 65540, -1441788, 0, 65540, -1441787, 0, 65540, -1441786, 0, 65536, -1441785, 0, 65540, -1441784, 0, 65540, -1441783, 0, 65540, -1441782, 0, 65540, -1441781, 0, 65540, -1441780, 0, 65540, -1310735, 0, 65540, -1310734, 0, 65540, -1310733, 0, 65540, -1310732, 0, 65540, -1310731, 0, 65540, -1310730, 0, 65540, -1310729, 0, 65538, -1310728, 0, 65540, -1310727, 0, 65540, -1310726, 0, 65540, -1310725, 0, 131075, -1310724, 0, 196610, -1310723, 2, 196612, -1310722, 2, 131077, -1376254, 1073741826, 196608, -1376253, 2, 196612, -1376252, 0, 65540, -1376251, 0, 65540, -1376250, 0, 65536, -1376249, 0, 65540, -1376248, 0, 65540, -1376247, 0, 65540, -1376246, 0, 65540, -1376245, 0, 65540, -1376244, 0, 65540, -1245199, 0, 65540, -1245198, 0, 65540, -1245197, 0, 65540, -1245196, 0, 65540, -1245195, 0, 65540, -1245194, 0, 65540, -1245193, 0, 65538, -1245192, 0, 65540, -1245191, 0, 65540, -1245190, 0, 65540, -1245189, 0, 65540, -1245188, 0, 131075, -1245187, 0, 196610, -1245186, 2, 196612, -1245185, 2, 131077, -1310717, 1073741826, 196608, -1310716, 2, 131073, -1310715, 2, 131073, -1310714, 0, 65536, -1310713, 0, 65540, -1310712, 0, 65540, -1310711, 0, 65540, -1310710, 0, 65540, -1310709, 0, 65540, -1310708, 0, 65540, -1179663, 0, 65540, -1179662, 0, 65540, -1179661, 0, 65540, -1179660, 0, 65540, -1179659, 0, 65540, -1179658, 0, 65540, -1179657, 0, 65538, -1179656, 0, 65540, -1179655, 0, 65540, -1179654, 0, 65540, -1179653, 0, 65540, -1179652, 0, 65540, -1179651, 0, 131075, -1179650, 0, 196610, -1245178, 0, 65536, -1245177, 0, 65540, -1245176, 0, 65540, -1245175, 0, 65540, -1245174, 0, 65540, -1245173, 0, 65540, -1245172, 0, 65540, -1114127, 0, 65540, -1114126, 0, 65540, -1114125, 0, 65540, -1114124, 0, 65540, -1114123, 0, 65540, -1114122, 0, 65540, -1114121, 0, 65538, -1114120, 2, 196612, -1114119, 2, 196612, -1114118, 2, 196612, -1114117, 2, 131073, -1114116, 2, 131073, -1114115, 2, 131073, -1114114, 2, 131073, -1179642, 0, 65536, -1179641, 0, 65540, -1179640, 0, 65540, -1179639, 0, 65540, -1179638, 0, 65540, -1179637, 0, 65540, -1179636, 0, 65540, -1048591, 0, 65540, -1048590, 0, 65540, -1048589, 0, 65540, -1048588, 0, 65540, -1048587, 0, 65540, -1048586, 0, 65540, -1048585, 0, 65538, -1048584, 2, 196612, -1048583, 2, 196612, -1048582, 2, 131074, -1114112, 2, 0, -1114111, 2, 1, -1114110, 2, 1, -1114109, 0, 196608, -1114108, 0, 1, -1114107, 0, 1, -1114106, 0, 65536, -1114105, 0, 65540, -1114104, 0, 65540, -1114103, 0, 65540, -1114102, 0, 65540, -1114101, 0, 65540, -1114100, 0, 65540, -983055, 0, 65540, -983054, 0, 65540, -983053, 0, 65540, -983052, 0, 65540, -983051, 0, 65540, -983050, 0, 65540, -983049, 0, 65538, -983048, 2, 196612, -983047, 2, 196612, -1048576, 2, 65536, -1048575, 2, 196612, -1048574, 0, 196608, -1048573, 0, 131077, -1048572, 0, 65540, -1048571, 0, 65540, -1048570, 0, 65536, -1048569, 0, 65540, -1048568, 0, 65540, -1048567, 0, 65540, -1048566, 0, 65540, -1048565, 0, 65540, -1048564, 0, 65540, -917519, 0, 65540, -917518, 0, 65540, -917517, 0, 65540, -917516, 0, 65540, -917515, 0, 65540, -917514, 0, 65540, -917513, 0, 65538, -917512, 2, 196612, -917511, 2, 196612, -917510, 2, 196612, -917509, 2, 196610, -983040, 2, 65536, -983039, 0, 196608, -983038, 0, 131077, -983037, 0, 65540, -983036, 0, 65540, -983035, 0, 65540, -983034, 0, 65536, -983033, 0, 65540, -983032, 0, 65540, -983031, 0, 65540, -983030, 0, 65540, -983029, 0, 65540, -983028, 0, 65540, -851983, 0, 65540, -851982, 0, 65540, -851981, 0, 65540, -851980, 0, 65540, -851979, 0, 65540, -851978, 0, 65540, -851977, 0, 65538, -851976, 0, 1, -851975, 0, 1, -851974, 0, 1, -851973, 0, 196610, -851972, 0, 65540, -851971, 2, 196610, -917504, 0, 196608, -917503, 0, 131077, -917502, 2, 131073, -917501, 2, 131073, -917500, 0, 65540, -917499, 0, 65540, -917498, 0, 65536, -917497, 0, 65540, -917496, 0, 65540, -917495, 0, 65540, -917494, 0, 65540, -917493, 0, 65540, -917492, 0, 65540, -786447, 0, 65540, -786446, 0, 65540, -786445, 0, 65540, -786444, 0, 65540, -786443, 0, 65540, -786442, 0, 65540, -786441, 0, 65538, -786440, 0, 65540, -786439, 0, 65540, -786438, 0, 65540, -786437, 0, 131075, -786436, 0, 196610, -786435, 0, 65540, -786434, 2, 196610, -851964, 1073741826, 196608, -851963, 0, 65540, -851962, 0, 65536, -851961, 0, 65540, -851960, 0, 65540, -851959, 0, 65540, -851958, 0, 65540, -851957, 0, 65540, -851956, 0, 65540, -720911, 0, 65540, -720910, 0, 65540, -720909, 0, 65540, -720908, 0, 65540, -720907, 0, 65540, -720906, 0, 65540, -720905, 0, 65538, -720904, 0, 65540, -720903, 0, 65540, -720902, 0, 65540, -720901, 0, 65540, -720900, 0, 131075, -720899, 0, 196610, -720898, 0, 65540, -786426, 0, 65536, -786425, 0, 65540, -786424, 0, 65540, -786423, 0, 65540, -786422, 0, 65540, -786421, 0, 65540, -786420, 0, 65540, -655375, 0, 65540, -655374, 0, 65540, -655373, 0, 65540, -655372, 0, 65540, -655371, 0, 65540, -655370, 0, 65540, -655369, 0, 65538, -655368, 2, 131073, -655367, 2, 131073, -655366, 2, 131073, -655365, 2, 131073, -655364, 2, 131073, -655363, 0, 131075, -655362, 0, 196610, -655361, 2, 131077, -720894, 2, 196608, -720893, 2, 1, -720892, 2, 1, -720891, 2, 1, -720890, 0, 65536, -720889, 0, 65540, -720888, 0, 65540, -720887, 0, 65540, -720886, 0, 65540, -720885, 0, 65540, -720884, 0, 65540, -589839, 0, 65540, -589838, 0, 65540, -589837, 0, 65540, -589836, 0, 65540, -589835, 0, 65540, -589834, 0, 65540, -589833, 0, 65538, -655358, 2, 65536, -655357, 2, 196612, -655356, 2, 196612, -655355, 2, 196612, -655354, 0, 65536, -655353, 0, 65540, -655352, 0, 65540, -655351, 0, 65540, -655350, 0, 65540, -655349, 0, 65540, -655348, 0, 65540, -524303, 0, 65540, -524302, 0, 65540, -524301, 0, 65540, -524300, 0, 65540, -524299, 0, 65540, -524298, 0, 65540, -524297, 0, 65538, -524296, 2, 196610, -589823, 2, 3, -589822, 2, 196612, -589821, 0, 196608, -589820, 0, 1, -589819, 0, 1, -589818, 0, 65536, -589817, 0, 65540, -589816, 0, 65540, -589815, 0, 65540, -589814, 0, 65540, -589813, 0, 65540, -589812, 0, 65540, -458767, 0, 65540, -458766, 0, 65540, -458765, 0, 65540, -458764, 0, 65540, -458763, 0, 65540, -458762, 0, 65540, -458761, 0, 65538, -458760, 2, 196612, -458759, 2, 196612, -458758, 2, 1, -458757, 2, 196610, -524287, 2, 131075, -524286, 0, 196608, -524285, 0, 131077, -524284, 0, 65540, -524283, 0, 65540, -524282, 0, 65536, -524281, 0, 65540, -524280, 0, 65540, -524279, 0, 65540, -524278, 0, 65540, -524277, 0, 65540, -524276, 0, 65540, -393231, 0, 65540, -393230, 0, 65540, -393229, 0, 65540, -393228, 0, 65540, -393227, 0, 65540, -393226, 0, 65540, -393225, 0, 65538, -393224, 2, 196612, -393223, 2, 196612, -393222, 2, 196612, -393221, 2, 196612, -458752, 2, 196608, -458751, 0, 196608, -458750, 0, 131077, -458749, 0, 65540, -458748, 0, 65540, -458747, 0, 65540, -458746, 0, 65536, -458745, 0, 65540, -458744, 0, 65540, -458743, 0, 65540, -458742, 0, 65540, -458741, 0, 65540, -458740, 0, 65540, -327695, 0, 65540, -327694, 0, 65540, -327693, 0, 65540, -327692, 0, 65540, -327691, 0, 65540, -327690, 0, 65540, -327689, 0, 65538, -327688, 0, 1, -327687, 0, 1, -327686, 0, 1, -327685, 0, 196610, -327684, 0, 65540, -327683, 2, 131077, -393216, 0, 196608, -393215, 0, 131077, -393214, 0, 65540, -393213, 0, 65540, -393212, 0, 65540, -393211, 0, 65540, -393210, 0, 65536, -393209, 0, 65540, -393208, 0, 65540, -393207, 0, 65540, -393206, 0, 65540, -393205, 0, 65540, -393204, 0, 65540, -262159, 0, 65540, -262158, 0, 65540, -262157, 0, 65540, -262156, 0, 65540, -262155, 0, 65540, -262154, 0, 65540, -262153, 0, 65538, -262152, 0, 65540, -262151, 0, 65540, -262150, 0, 65540, -262149, 0, 131075, -262148, 0, 196610, -262147, 0, 65540, -262146, 2, 131077, -327677, 2, 131075, -327676, 2, 131073, -327675, 2, 131073, -327674, 0, 65536, -327673, 0, 65540, -327672, 0, 65540, -327671, 0, 65540, -327670, 0, 65540, -327669, 0, 65540, -327668, 0, 65540, -196623, 0, 65540, -196622, 0, 65540, -196621, 0, 65540, -196620, 0, 65540, -196619, 0, 65540, -196618, 0, 65540, -196617, 0, 65538, -196616, 0, 65540, -196615, 0, 65540, -196614, 0, 65540, -196613, 0, 65540, -196612, 0, 131075, -196611, 0, 196610, -196610, 0, 65540, -262138, 0, 65536, -262137, 0, 65540, -262136, 0, 65540, -262135, 0, 65540, -262134, 0, 65540, -262133, 0, 65540, -262132, 0, 65540, -131087, 0, 131073, -131086, 0, 131073, -131085, 0, 131073, -131084, 0, 131073, -131083, 0, 131073, -131082, 0, 131073, -131081, 0, 131073, -131080, 0, 131073, -131079, 0, 131073, -131078, 0, 131073, -131077, 0, 131073, -131076, 0, 131073, -131075, 0, 131075, -131074, 0, 196610, -196602, 0, 65536, -196601, 0, 65540, -196600, 0, 65540, -196599, 0, 65540, -196598, 0, 65540, -196597, 0, 65540, -196596, 0, 65540, -65551, 0, 65540, -65550, 0, 65540, -65549, 0, 65540, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65540, -65544, 0, 65540, -65543, 0, 65540, -65542, 0, 65540, -65541, 0, 65540, -65540, 0, 65540, -65539, 0, 65540, -65538, 0, 65540, -65537, 2, 131077, -131066, 0, 65536, -131065, 0, 65540, -131064, 0, 65540, -131063, 0, 65540, -131062, 0, 65540, -131061, 0, 65540, -131060, 0, 65540, -15, 0, 65540, -14, 0, 65540, -13, 0, 65540, -12, 0, 65540, -11, 0, 65540, -10, 0, 65540, -9, 0, 65540, -8, 0, 65540, -7, 0, 65540, -6, 0, 65540, -5, 0, 65540, -4, 0, 65540, -3, 0, 65540, -2, 0, 65540, -1, 0, 65540, -65536, 2, 131077, -65530, 0, 65536, -65529, 0, 65540, -65528, 0, 65540, -65527, 0, 65540, -65526, 0, 65540, -65525, 0, 65540, -65524, 0, 65540, 65521, 0, 1, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 2, 6, 0, 65536, 7, 0, 65540, 8, 0, 65540, 9, 0, 65540, 10, 0, 65540, 11, 0, 65540, 12, 0, 65540, 131057, 0, 65540, 131058, 0, 65540, 131059, 0, 65540, 131060, 0, 65540, 131061, 0, 65540, 131062, 0, 65540, 131063, 0, 65540, 131064, 0, 65540, 131065, 0, 65540, 131066, 0, 65540, 131067, 0, 65540, 131068, 0, 65540, 131069, 0, 65540, 131070, 0, 65540, 131071, 0, 65540, 65536, 0, 65540, 65537, 0, 65540, 65538, 0, 65538, 65542, 0, 65536, 65543, 0, 65540, 65544, 0, 65540, 65545, 0, 65540, 65546, 0, 65540, 65547, 0, 65540, 65548, 0, 65540, 196593, 0, 65540, 196594, 0, 65540, 196595, 0, 65540, 196596, 0, 65540, 196597, 0, 65540, 196598, 0, 65540, 196599, 0, 65540, 196600, 0, 65540, 196601, 0, 65540, 196602, 0, 65540, 196603, 0, 65540, 196604, 0, 65540, 196605, 0, 65540, 196606, 0, 65540, 196607, 0, 65540, 131072, 0, 65540, 131073, 0, 65540, 131074, 0, 65538, 131078, 0, 65536, 131079, 0, 65540, 131080, 0, 65540, 131081, 0, 65540, 131082, 0, 65540, 131083, 0, 65540, 131084, 0, 65540, 262129, 0, 65540, 262130, 0, 65540, 262131, 0, 65540, 262132, 0, 65540, 262133, 0, 65540, 262134, 0, 65540, 262135, 0, 65540, 262136, 0, 65540, 262137, 0, 65540, 262138, 0, 65540, 262139, 0, 65540, 262140, 0, 65540, 262141, 0, 65540, 262142, 0, 65540, 262143, 0, 65540, 196608, 0, 65540, 196609, 0, 65540, 196610, 0, 65538, 196614, 0, 65536, 196615, 0, 65540, 196616, 0, 65540, 196617, 0, 65540, 196618, 0, 65540, 196619, 0, 65540, 196620, 0, 65540, 327665, 0, 65540, 327666, 0, 65540, 327667, 0, 65540, 327668, 0, 65540, 327669, 0, 65540, 327670, 0, 65540, 327671, 0, 65540, 327672, 0, 65540, 327673, 0, 65540, 327674, 0, 65540, 327675, 0, 65540, 327676, 0, 65540, 327677, 0, 65540, 327678, 0, 65540, 327679, 0, 65540, 262144, 0, 65540, 262145, 0, 65540, 262146, 0, 65538, 262150, 0, 65536, 262151, 0, 65540, 262152, 0, 65540, 262153, 0, 65540, 262154, 0, 65540, 262155, 0, 65540, 262156, 0, 65540, 393201, 0, 65540, 393202, 0, 65540, 393203, 0, 65540, 393204, 0, 65540, 393205, 0, 65540, 393206, 0, 65540, 393207, 0, 65540, 393208, 0, 65540, 393209, 0, 65540, 393210, 0, 65540, 393211, 0, 65540, 393212, 0, 65540, 393213, 0, 65540, 393214, 0, 65540, 393215, 0, 65540, 327680, 0, 65540, 327681, 0, 65540, 327682, 0, 65538, 327686, 0, 65536, 327687, 0, 65540, 327688, 0, 65540, 327689, 0, 65540, 327690, 0, 65540, 327691, 0, 65540, 327692, 0, 65540 )

[node name="FrontMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 3, 1, 1, 4, 1, 1, 5, 1, 1 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( -256, -32 )

[node name="MainCamera" type="Camera2D" parent="player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -384, -960 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 384, 128 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -344, -32 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="end_position" type="Position2D" parent="."]
position = Vector2( 328, -896 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="enemy" type="Node2D" parent="."]

[node name="haniwa_archer" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( -208, -192 )
SCOUT = 1

[node name="haniwa_archer2" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( 160, -288 )
SCOUT = -1

[node name="haniwa_archer3" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( -208, -448 )
SCOUT = 1

[node name="haniwa_archer4" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( 160, -544 )
SCOUT = -1

[node name="haniwa_archer5" parent="enemy" instance=ExtResource( 7 )]
position = Vector2( -216, -704 )
SCOUT = 1

[node name="begin" type="Area2D" parent="."]
position = Vector2( -390, -46 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="begin"]
shape = SubResource( 1 )

[node name="end" type="Area2D" parent="."]
position = Vector2( 378, -910 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="end"]
shape = SubResource( 1 )

[connection signal="body_entered" from="begin" to="." method="_on_begin_body_entered"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
